Wed Apr 17 15:32:44 BST 2002  Olly Betts <olly@survex.com>

	* Makefile portability improvements.

Wed Apr 17 14:29:21 BST 2002  Olly Betts <olly@survex.com>

	* Replaced uses of GNU make specific features with more portable
	  ones.

Wed Apr 17 12:43:07 BST 2002  Olly Betts <olly@survex.com>

	* Update todo list. 

Wed Apr 17 12:41:03 BST 2002  Olly Betts <olly@survex.com>

	* Removed BrightStation's logo from the documentation.

Wed Apr 17 12:27:07 BST 2002  Olly Betts <olly@survex.com>

	* xapian-config: Removed --uninst support - it's very hard to make it
	  work reliably and we're better off directing our efforts towards
	  improving the library than trying to get it working and keep it
	  working.

Wed Apr 17 10:39:02 BST 2002  Olly Betts <olly@survex.com>

	* Fixed btreetest code to use new names "ord+" and "ord-" for
	  datafiles; disabled LFSinsertdelete1 test as it's exactly the
	  same as insertdelete1 (despite the comment above which suggests
	  it tests files >2G).

Mon Apr 15 17:14:22 BST 2002  Olly Betts <olly@survex.com>

	* Fix a few OmDatabase::InternalInterface uses I'd somehow missed.

Mon Apr 15 16:08:20 BST 2002  Olly Betts <olly@survex.com>

	* Mark internal classes as @internal for doxygen; removed all uses
	  of OmDatabase::InternalInterface as it's no longer needed.

Mon Apr 15 15:42:47 BST 2002  Olly Betts <olly@survex.com>

	* Updated TODO list.

Mon Apr 15 2002  Sam Liddicott <sam@ananova.com>

	* Hacked around bindings and bindings/php to remove some SWIG 
	  workarounds.  SWIG cvs + some new non-comitted patches is need still.

Mon Apr 15 12:12:05 BST 2002  Olly Betts <olly@survex.com>

	* stemtest: getopt fix.

	* stemtest.pl.in: output now: less verbose by default and coloured.

Mon Apr 15 11:18:58 BST 2002  Olly Betts <olly@survex.com>

	* Updated HACKING to say that automake 1.5 is required, and note that
	  automake 1.6.1 is better than 1.6.

Sat Apr 13 20:35:51 2002  James Aylett  <tartarus@users.sourceforge.net>
