@@ -1,3 +1,8 @@
+Wed Apr 17 16:07:02 BST 2002  Olly Betts <olly@survex.com>
+
+	* bindings/php4/Makefile.am: Fixed a couple of problems with
+	  recent changes.
+
 Wed Apr 17 15:32:44 BST 2002  Olly Betts <olly@survex.com>
 
 	* Makefile portability improvements.
